# player2

./: .gitignore  CMakeLists.txt  README.md  class_settings.cpp  class_settings.h  debug.h  defines.h  main.cpp  main.qml  player2.pro  player2.qmlproject  qmlmodules  settings_key.h  settings_start_value.h  typedefs.h  uk_UA.qm  uk_UA.ts  widget.cpp  widget.h  widget.ui
content/: App.qml  Screen01.ui.qml
imports/: CMakeLists.txt
imports/player2/: CMakeLists.txt  Constants.qml  DirectoryFontLoader.qml  EventListModel.qml  EventListSimulator.qml  qmldir
imports/player2/designer/: plugin.metainfo
plugin/player2_dir/: player2_dir.cpp  player2_dir.h  player2_dir.pro
plugin/player2_help/: defines.h  player2_help.cpp  player2_help.h  player2_help.pro
plugin/player2_media_info/: defines.h  player2_media_info.cpp  player2_media_info.h  player2_media_info.pro
plugin/player2_playlist/: defines.h  player2_playlist.cpp  player2_playlist.h  player2_playlist.pro
plugin/player2_readme/: defines.h  player2_readme.cpp  player2_readme.h  player2_readme.pro
plugin/player2_url/: defines.h  player2_url.cpp  player2_url.h  player2_url.pro
resources/: resource.qrc  resources.qrc
resources/translate/: en_US.qm
src/: defines.h  import_qml_plugins.h  qglobalshortcut.cc  qglobalshortcut.h  qglobalshortcut_mac.cc  qglobalshortcut_win.cc  qglobalshortcut_x11.cc  widget.cpp  widget.h
src/plugins/: PluginDir.h  PluginHelp.h  PluginMediaInfo.h  PluginPlaylist.h  PluginReadme.h  PluginUrl.h
src/settings/: Settings.cpp  Settings.h  SettingsKey.h
src/shortcut/: qglobalshortcut.cc  qglobalshortcut.h  qglobalshortcut_mac.cc  qglobalshortcut_win.cc  qglobalshortcut_x11.cc
translate/: en_US.ts
